# framy

./: Cargo.toml  README.md  expand.rs
examples/framy_example/: Cargo.toml  README.md
examples/framy_example/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
examples/pallet-example/: Cargo.toml  README.md
examples/pallet-example/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
framy/: Cargo.toml  build.rs
framy/src/: context.rs  main.rs  presets.rs
framy/templates/: Cargo.tera  README.tera  benchmarking_v2.tera  lib.tera  mock.tera  tests.tera  weights.tera
src/: context.rs  main.rs  presets.rs
templates/: Cargo.tera  benchmarking_v2.tera  lib.tera  weights.tera
