[package]
name = "framy"
version = "0.2.2"
edition = "2021"
license = "	GPL-3.0-only" # Binary anyway
description = "Inofficial FRAME cli for pallet and runtime maintenance."
build = "build.rs"

[[example]]
crate-type = ["staticlib"]
name = "framy-example"
path = "examples/framy_example/"

[dependencies]
convert_case = "0.6.0"
env_logger = "0.10.0"
inquire = "0.6.2"
log = "0.4.17"
phf = "0.11.1"
serde = { version = "1.0.162", features = ["derive"] }
tera = "1.18.1"
tera-text-filters = "1.0.0"
typesafe-builders = { version = "0.5.0" }

[build-dependencies]
phf_codegen = "0.11.1"
