[package]
name = "pallet-example"
version = "0.1.0"
description = "Does nothing."
authors = ["Parity Technologies <admin@parity.io>"]
homepage = "https://polkadot.network/"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/paritytech/polkadot-sdk.git"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.6.6", default-features = false, features = [ "derive"] }
scale-info = { version = "2.9.0", default-features = false, features = ["derive"] }

frame-benchmarking = { version = "22.0.0", default-features = false, optional = true }
frame-support = { version = "22.0.0", default-features = false }
frame-system = { version = "22.0.0", default-features = false }

[dev-dependencies]
sp-core = { version = "22.0.0" }
sp-io = { version = "24.0.0" }
sp-runtime = { version = "25.0.0" }

[features]
default = [ "std" ]

std = [
	"codec/std",
	"frame-benchmarking?/std",
	"frame-support/std",
	"frame-system/std",
	"scale-info/std",
	"sp-runtime/std",
]

runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]

try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"sp-runtime/try-runtime",
]
